# Clinical-Trial-Data-Simulator

./: Dockerfile.backend  Dockerfile.frontend  MANIFEST.in  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci_cd.yml  test.yml
api/: app.py  routes.py
data_generator/: data_validator.py  patient_simulator.py  trial_designer.py
database/: schema.sql
frontend/: dashboard.js  index.html  styles.css
tests/: conftest.py  test_api.py  test_data_validator.py  test_patient_simulator.py  test_statistics.py  test_trial_designer.py
