[metadata]
name = clinical-trial-simulator
version = 1.0.0
description = A comprehensive platform for simulating clinical trial data and analysis
author = Your Name
author_email = your.email@example.com
license = MIT
keywords = clinical,trial,simulation,healthcare,research
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
packages = find:
python_requires = >=3.8
install_requires =
    fastapi>=0.104.1
    uvicorn>=0.24.0
    mysql-connector-python>=8.1.0
    pydantic>=2.5.0
    pandas>=2.1.3
    numpy>=1.24.3
    scipy>=1.11.4
    python-multipart>=0.0.6
    python-dotenv>=1.0.0
    jinja2>=3.1.2

[options.packages.find]
exclude = 
    tests*
    docs*
    examples*

[options.extras_require]
dev =
    pytest>=7.4.3
    pytest-asyncio>=0.21.1
    pytest-cov>=4.1.0
    httpx>=0.25.2
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0

[coverage:run]
source = 
    data_generator
    api
omit = 
    */tests/*
    */venv/*
    */__pycache__/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*Mock.*
